# PiKeyboard

./: .gitignore  LICENSE.md  README.md  enable-rpi-hid  enable-rpi-hid.bash  install.bash  install.sh  pikeyboard  run.sh  usb-gadget.service  vulkan.sh
keyboards/: smite.json  testkb.json
pythonGUI/: gui.py  test.py
pythonGUI/.mypy_cache/3.7/: _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  gui.data.json  gui.meta.json  io.meta.json  mmap.meta.json  pathlib.data.json  pathlib.meta.json  posix.meta.json  subprocess.data.json  subprocess.meta.json  sys.meta.json  test.data.json  test.meta.json  types.meta.json  typing.meta.json
pythonGUI/.mypy_cache/3.7/collections/: __init__.meta.json  abc.meta.json
pythonGUI/.mypy_cache/3.7/importlib/: __init__.meta.json  abc.meta.json  machinery.meta.json  util.meta.json
pythonGUI/.mypy_cache/3.7/json/: __init__.data.json  __init__.meta.json  decoder.meta.json  encoder.meta.json
pythonGUI/.mypy_cache/3.7/os/: __init__.meta.json  path.meta.json
pythonGUI/.mypy_cache/3.7/tkinter/: __init__.meta.json  constants.meta.json
rust-example/src/: main.rs
rustPart/: Cargo.toml
rustPart/keyboards/: testkb.json
rustPart/src/: constants.rs  gui.rs  keyboard.rs  keys.rs  main.rs
