[package]
name = "pikeyboard"
version = "0.1.0"
authors = ["Black616Angel <the-black-angel@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#GUI
iced = "*"

#JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"